<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Veckify</string>
    <string name="noPlaylistSelected">Playlist</string>
    <string name="repeatDayMonday">MON</string>
    <string name="repeatDayTuesday">TUE</string>
    <string name="repeatDayWednesday">WED</string>
    <string name="repeatDayThursday">THU</string>
    <string name="repeatDayFriday">FRI</string>
    <string name="repeatDaySaturday">SAT</string>
    <string name="repeatDaySunday">SUN</string>
    <string name="activity_offline_playlists">Offline playlists</string>
    <string name="download_playlist_button">Download</string>
    <string name="notification_alarm_title">Alarm scheduled</string>
    <string name="notification_alarm_description">%1$s — %2$s</string>
    <string name="menu_offline_playlists">Offline playlists</string>
    <string name="menu_add_alarm">Add alarm</string>
    <string name="alarm_deleted">%1$d deleted</string>
    <string name="repeat_checkbox">Repeat</string>
    <string name="repeatdays_none">Once</string>
    <string name="repeatdays_all">Every day</string>
    <string name="repeatdays_daysformat">Every %1$s</string>
    <string-array name="repeatdays_shortday">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="alarmscheduled_soon">Real soon now</string>
    <string name="alarmscheduled_suffix">from now</string>
    <plurals name="alarmscheduled_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="alarmscheduled_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="alarmscheduled_mins">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <string name="run_now_button">Run now</string>
</resources>
